--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/css/front.css": "/css/front.css",
     "/css/profiles.css": "/css/profiles.css",
     "/css/admin.css": "/css/admin.css"
 }
